# rust-autohedge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE_MEMORY.md  COOLDOWN_QUICK_REFERENCE.md  Cargo.toml  DOCUMENTATION_CLEANUP_SUMMARY.md  Dockerfile  GITHUB_ACTIONS_IMPLEMENTATION.md  GITHUB_ACTIONS_SUGGESTIONS.md  HFT_PERFORMANCE.md  NO_TRADE_COOLDOWN.md  ORDER_MINIMUM_FIX.md  ORDER_VALIDATION_TESTS.md  ORPHANED_POSITION_FIX.md  ORPHANED_POSITION_QUICKFIX.md  POSITION_MANAGEMENT_GUIDE.md  README.md  SELL_LOGIC_ANALYSIS.md  TAKE_PROFIT_STOP_LOSS_COMPLETE.md  TECHNICAL_DESIGN.md  TESTS.md  USER_GUIDE.md  config.example.yaml  config.yaml
.github/: .copilot-instructions.md  README.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/workflows/: auto-label.yml  benchmark.yml  ci.yml  codeql.yml  dependency-review.yml  docker.yml  docs.yml  release.yml  stale.yml
docs/: INDEX.md  OPTIMIZATION_REPORT.md
src/: api.rs  bus.rs  bus_tests.rs  config.rs  config_tests.rs  constants.rs  error.rs  events.rs  events_tests.rs  lib.rs  main.rs
src/agents/: director.rs  execution.rs  mod.rs  quant.rs  risk.rs
src/data/: alpaca.rs  mod.rs  store.rs  store_tests.rs
src/exchange/: alpaca.rs  binance.rs  coinbase.rs  factory.rs  kraken.rs  mod.rs  symbols.rs  traits.rs  types.rs  types_tests.rs  ws.rs
src/llm/: mod.rs  queue.rs
src/services/: execution.rs  execution_fast.rs  execution_utils.rs  execution_utils_tests.rs  keep_alive.rs  mod.rs  position_monitor.rs  position_monitor_tests.rs  risk.rs  (+4 more)
tests/: integration_tests.rs
