[package]
name = "rust_autohedge"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_autohedge"
path = "src/lib.rs"

[[bin]]
name = "rust_autohedge"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-openai = "0.32.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
axum = "0.8.8"
rand = "0.8"
async-trait = "0.1"
dashmap = "6.1"
serde_yaml = "0.9.34"
tokio-cron-scheduler = "0.10"
thiserror = "1.0"
